[project]
name = "langgraph-dbx-apps"
version = "0.1.0"
description = "LangGraph supervisor agent on Databricks Apps with Lakebase memory"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.0",
    "langchain-core>=0.3.0",
    "databricks-langchain>=0.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mlflow>=3.8.0",
    "streamlit>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
