[project]
name = "langgraph-supervisor-memory"
version = "0.2.0"
description = "LangGraph supervisor with Lakebase-backed short-term + long-term memory"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.0",
    "langchain-core>=0.3.0",
    "databricks-langchain[memory]>=0.4.0",
    "databricks-sdk>=0.81.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mlflow>=3.8.0",
    "streamlit>=1.40.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
